--- a/springboot-shiro-ehcache/src/main/resources/templates/auth/login.html
+++ b/springboot-shiro-ehcache/src/main/resources/templates/auth/login.html
@@ -6,6 +6,10 @@
     <title>Title</title>
 </head>
 <body>
-
+    <form th:action="@{/login}" method="post">
+        <input name="username" type="text" /><br/>
+        <input name="password" type="password" /><br/>
+        <input type="submit" value="登录" />
+    </form>
 </body>
 </html>
