--- a/springboot-shiro-ehcache/src/main/resources/templates/auth/register.html
+++ b/springboot-shiro-ehcache/src/main/resources/templates/auth/register.html
@@ -10,7 +10,7 @@
 
 <form th:action="@{/register}" method="post">
     <input type="text" name="name" /><br/>
-    <input type="text" name="password" />
+    <input type="text" name="password" /><br/>
     <input type="submit" value="注册" />
 </form>
 
